<resources>
    <string name="app_name">CeloTest</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="update_password">Update password</string>
    <string name="filter_male">Male</string>
    <string name="filter_female">Female</string>
    <string name="filter_by_gender">Filter by gender</string>
    <string name="filter_options">Filter options</string>
    <string name="publish">Publish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be un-done.</string>
    <string name="text_info">Info</string>
    <string name="delete">Delete</string>

    <string name="process_death_state">process_death_state</string>
    <string name="gender">gender</string>
    <string name="the_name_of_title_first_last">The name of title+first+last</string>
    <string name="user_date">user date</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="filter_all">All</string>
</resources>
