<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="22sp"
            android:textColor="#000"
            android:text="@string/filter_options"
            />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:id="@+id/filter_group"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:text="@string/filter_by_gender"
                />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter_male"
                android:text="@string/filter_male"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter_female"
                android:text="@string/filter_female"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginTop="20dp"
                />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_all"
            android:text="@string/filter_all"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />
    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="30dp"
            >

        <TextView
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="30dp"

                />

        <TextView
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply"
                android:textSize="16sp"
                android:textColor="@color/tealDark"
                />

    </LinearLayout>
</LinearLayout>